# AAES-OS

./: .constitutional_freeze.json  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DOCKER_REFERENCE.md  Dar-z Morris.docx  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  REGISTRY_SETUP.md  SECURITY.md  SUPPORT.md  ai_organism.py  constitutional_bootstrap.py  constitutional_freeze.py  docker-compose.yml  eslint.config.mjs  layer_components.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prime_architect_integration.py  test_ulx_nova_integration.py  tsconfig.base.json  tsconfig.json  ucdd_standards.py  verify_files.bat  vitest.config.ts
.githooks/: post-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
ci-artifacts/: dishamory_chaos_report.json  forge-shippable-gate-report.json  promotion-dry-run-report.json  (+3 more)
docs/: README.md  (+3 more)
llm-inference-engine/: CMakeLists.txt  requests.jsonl  test_requests.jsonl
llm-inference-engine/docs/: INVARIANTS.md
llm-inference-engine/src/: executor_interface.h  governance.cpp  governance.h  http_server.cpp  http_server.h  main.cpp  model_config.h  model_loader.cpp  model_loader.h  proof_surface.cpp  proof_surface.h  tensor.h  tensor_ops.cpp  tensor_ops.h
llm-inference-engine/src/CL/: cl.h
llm-inference-engine/src/backend/: cpu_backend.cpp  cpu_backend.h  opencl_backend.cpp  opencl_backend.h  vulkan_backend.cpp  vulkan_backend.h
llm-inference-engine/src/vulkan/: vulkan.h
llm-inference-engine/tests/: test_backend_comparison.cpp  test_integration.cpp  test_main.cpp  test_proof_surface.cpp  test_tensor_ops.cpp
sdk/python/: README.md  pyproject.toml
sdk/python/aaes_os/: __init__.py  cli.py  client.py
sdk/python/aaes_platform/: __init__.py  client.py
sdk/python/examples/: basic_usage.py
sovereign-ide/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt
sovereign-ide/cep/: __init__.py  client.py  config.py  conformance_runner.py  evidence_validator.py  governance_core.py  ingress_gateway.py  lineage_validator.py  models.py  queues.py  replay_engine.py
sovereign-ide/plugins/: __init__.py  prime_architect.py
sovereign-ide/runtime/: __init__.py  agent_loop.py  api_server.py  codex_loader.py  constitution.py  federation_bootstrapper.py  orchestrator.py  prime_architect.py  state.py  temporal.py  ulx_bridge.py
sovereign-ide/sovereign/: conf_goa_cpu.json  constitution_hardware.json  prime_architect.json  spec_goa_cpu.json
sovereign-ide/sovereign/resonance/: resonance.json
sovereign-ide/sovereign_ide/: __init__.py  app.py
sovereign-ide/sovereign_ide/widgets/: __init__.py  cep_widgets.py  mandala_widget.py  surface_widgets.py
sovereign-ide/tests/: test_cep_loop.py  test_constitution_and_cep_client.py  test_prime_architect.py  test_sovereign_ide_window.py
sovereign-ide/ui/: __init__.py
sovereign-ide/ui/shell/: __init__.py  sovereign_ide_window.py  sovereign_shell.py
(+682 files in other folders)
