[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aaes-os-sdk"
version = "0.1.0"
description = "Official Python SDK for AAES-OS PSOM + SGCE super-platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AAES-OS" }]
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aaes_os*"]

[project.scripts]
aaes-mesh = "aaes_os.cli:main"
